Add comprehensive AVIF converter pages (50 converters)
Created pages:
- AVIF to other formats (12): PDF, BMP, EPS, GIF, ICO, JPG, ODD, PNG, PS, PSD, TIFF, WEBP
- Other formats to AVIF (38): JPG, PNG, WEBP, GIF, BMP, TIFF, SVG, PSD, HEIC, HEIF, ICO, PDF, EPS, PS, XCF, JFIF, JPEG, PPM, ODD, XPS, SVGZ, EMF, TIF
- RAW camera formats to AVIF (15): CR2, CR3, CRW, NEF, DNG, ORF, RAF, RW2, PEF, DCR, ERF, MOS, MRW, X3F, RAW

Added all 50 AVIF converter cards to Image Converters section:
- Organized by type (AVIF to formats, formats to AVIF, RAW to AVIF)
- Includes drag-and-drop upload, AdSense slots, premium detection
- Matches existing converter design with glassmorphism style

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -1142,6 +1142,351 @@
                         <h3>AVIF to JPG</h3>
                         <p>Convert next-gen AVIF format to standard JPG</p>
                     </a>
+                    <a href="avif-to-png.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to PNG</h3>
+                        <p>Convert AVIF to PNG format</p>
+                    </a>
+                    <a href="avif-to-pdf.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to PDF</h3>
+                        <p>Convert AVIF to PDF documents</p>
+                    </a>
+                    <a href="avif-to-webp.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to WEBP</h3>
+                        <p>Convert AVIF to WEBP format</p>
+                    </a>
+                    <a href="avif-to-tiff.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to TIFF</h3>
+                        <p>Convert AVIF to TIFF format</p>
+                    </a>
+                    <a href="avif-to-bmp.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to BMP</h3>
+                        <p>Convert AVIF to BMP format</p>
+                    </a>
+                    <a href="avif-to-gif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to GIF</h3>
+                        <p>Convert AVIF to GIF format</p>
+                    </a>
+                    <a href="avif-to-ico.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to ICO</h3>
+                        <p>Convert AVIF to ICO icon format</p>
+                    </a>
+                    <a href="avif-to-psd.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to PSD</h3>
+                        <p>Convert AVIF to Photoshop PSD</p>
+                    </a>
+                    <a href="avif-to-eps.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to EPS</h3>
+                        <p>Convert AVIF to EPS vector</p>
+                    </a>
+                    <a href="avif-to-ps.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to PS</h3>
+                        <p>Convert AVIF to PostScript</p>
+                    </a>
+                    <a href="avif-to-odd.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to ODD</h3>
+                        <p>Convert AVIF to ODD document</p>
+                    </a>
+                    <!-- To AVIF Converters -->
+                    <a href="jpg-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>JPG to AVIF</h3>
+                        <p>Convert JPG to next-gen AVIF format</p>
+                    </a>
+                    <a href="png-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>PNG to AVIF</h3>
+                        <p>Convert PNG to AVIF format</p>
+                    </a>
+                    <a href="webp-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-images"></i>
+                        </div>
+                        <h3>WEBP to AVIF</h3>
+                        <p>Convert WEBP to AVIF format</p>
+                    </a>
+                    <a href="gif-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-film"></i>
+                        </div>
+                        <h3>GIF to AVIF</h3>
+                        <p>Convert GIF to AVIF format</p>
+                    </a>
+                    <a href="bmp-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>BMP to AVIF</h3>
+                        <p>Convert BMP to AVIF format</p>
+                    </a>
+                    <a href="tiff-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>TIFF to AVIF</h3>
+                        <p>Convert TIFF to AVIF format</p>
+                    </a>
+                    <a href="svg-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-vector-square"></i>
+                        </div>
+                        <h3>SVG to AVIF</h3>
+                        <p>Convert SVG to AVIF format</p>
+                    </a>
+                    <a href="psd-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>PSD to AVIF</h3>
+                        <p>Convert Photoshop PSD to AVIF</p>
+                    </a>
+                    <a href="heic-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <h3>HEIC to AVIF</h3>
+                        <p>Convert Apple HEIC to AVIF</p>
+                    </a>
+                    <a href="heif-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <h3>HEIF to AVIF</h3>
+                        <p>Convert Apple HEIF to AVIF</p>
+                    </a>
+                    <a href="ico-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-icons"></i>
+                        </div>
+                        <h3>ICO to AVIF</h3>
+                        <p>Convert ICO icons to AVIF</p>
+                    </a>
+                    <a href="pdf-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>PDF to AVIF</h3>
+                        <p>Convert PDF to AVIF format</p>
+                    </a>
+                    <a href="eps-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>EPS to AVIF</h3>
+                        <p>Convert EPS vector to AVIF</p>
+                    </a>
+                    <a href="ps-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>PS to AVIF</h3>
+                        <p>Convert PostScript to AVIF</p>
+                    </a>
+                    <a href="xcf-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-layer-group"></i>
+                        </div>
+                        <h3>XCF to AVIF</h3>
+                        <p>Convert GIMP XCF to AVIF</p>
+                    </a>
+                    <a href="jfif-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>JFIF to AVIF</h3>
+                        <p>Convert JFIF to AVIF format</p>
+                    </a>
+                    <a href="jpeg-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>JPEG to AVIF</h3>
+                        <p>Convert JPEG to AVIF format</p>
+                    </a>
+                    <a href="ppm-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>PPM to AVIF</h3>
+                        <p>Convert PPM to AVIF format</p>
+                    </a>
+                    <a href="odd-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-alt"></i>
+                        </div>
+                        <h3>ODD to AVIF</h3>
+                        <p>Convert ODD to AVIF format</p>
+                    </a>
+                    <a href="xps-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>XPS to AVIF</h3>
+                        <p>Convert XPS to AVIF format</p>
+                    </a>
+                    <a href="svgz-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-vector-square"></i>
+                        </div>
+                        <h3>SVGZ to AVIF</h3>
+                        <p>Convert compressed SVG to AVIF</p>
+                    </a>
+                    <a href="emf-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>EMF to AVIF</h3>
+                        <p>Convert Windows EMF to AVIF</p>
+                    </a>
+                    <a href="tif-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>TIF to AVIF</h3>
+                        <p>Convert TIF to AVIF format</p>
+                    </a>
+                    <!-- RAW to AVIF Converters -->
+                    <a href="cr2-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>CR2 to AVIF</h3>
+                        <p>Convert Canon CR2 RAW to AVIF</p>
+                    </a>
+                    <a href="cr3-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>CR3 to AVIF</h3>
+                        <p>Convert Canon CR3 RAW to AVIF</p>
+                    </a>
+                    <a href="crw-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>CRW to AVIF</h3>
+                        <p>Convert Canon CRW RAW to AVIF</p>
+                    </a>
+                    <a href="nef-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>NEF to AVIF</h3>
+                        <p>Convert Nikon NEF RAW to AVIF</p>
+                    </a>
+                    <a href="dng-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>DNG to AVIF</h3>
+                        <p>Convert Adobe DNG RAW to AVIF</p>
+                    </a>
+                    <a href="orf-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ORF to AVIF</h3>
+                        <p>Convert Olympus ORF RAW to AVIF</p>
+                    </a>
+                    <a href="raf-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>RAF to AVIF</h3>
+                        <p>Convert Fujifilm RAF RAW to AVIF</p>
+                    </a>
+                    <a href="rw2-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>RW2 to AVIF</h3>
+                        <p>Convert Panasonic RW2 RAW to AVIF</p>
+                    </a>
+                    <a href="pef-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>PEF to AVIF</h3>
+                        <p>Convert Pentax PEF RAW to AVIF</p>
+                    </a>
+                    <a href="dcr-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>DCR to AVIF</h3>
+                        <p>Convert Kodak DCR RAW to AVIF</p>
+                    </a>
+                    <a href="erf-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ERF to AVIF</h3>
+                        <p>Convert Epson ERF RAW to AVIF</p>
+                    </a>
+                    <a href="mos-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>MOS to AVIF</h3>
+                        <p>Convert Leaf MOS RAW to AVIF</p>
+                    </a>
+                    <a href="mrw-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>MRW to AVIF</h3>
+                        <p>Convert Minolta MRW RAW to AVIF</p>
+                    </a>
+                    <a href="x3f-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>X3F to AVIF</h3>
+                        <p>Convert Sigma X3F RAW to AVIF</p>
+                    </a>
+                    <a href="raw-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>RAW to AVIF</h3>
+                        <p>Convert generic RAW to AVIF</p>
+                    </a>
                     <a href="tif-to-png.html" class="converter-card" target="_blank">
                         <div class="converter-icon">
                             <i class="fas fa-file-image"></i>
