Update frontend to use production backend URL
- Updated login.html API URL to backend-yanie.ondigitalocean.app
- Updated verify-email.html API URL to production backend
- Backend deployed and running on DigitalOcean App Platform
- Connected to DigitalOcean MongoDB database
- All authentication endpoints working
- Ready for production testing

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -313,7 +313,7 @@
 
     <script>
         // API Configuration
-        const API_URL = 'https://sigiri-slgI6.ondigitalocean.app/api/auth';
+        const API_URL = 'https://backend-yanie.ondigitalocean.app/api/auth';
 
         // Switch between login and register tabs
         function switchTab(tab) {
