--- a/frontend/verify-email.html
+++ b/frontend/verify-email.html
@@ -120,7 +120,7 @@
 
     <script>
         // API Configuration
-        const API_URL = 'https://sigiri-slgI6.ondigitalocean.app/api/auth';
+        const API_URL = 'https://backend-yanie.ondigitalocean.app/api/auth';
 
         // Get token from URL
         const urlParams = new URLSearchParams(window.location.search);
